--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: bryalara/VWB-MemberTracker/memberPage@1
+      - uses: bryalara/VWB-MemberTracker/memberPage@v1
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "vwb-memberpage"
